--- a/.github/ISSUE_TEMPLATE/test-form-name.yml
+++ b/.github/ISSUE_TEMPLATE/test-form-name.yml
@@ -3,12 +3,12 @@ description: File a bug report v2
 title: "[Bug]: "
 labels: ["bug", "triage"]
 assignees:
-  - octocat
+  - testswell
 body:
   - type: markdown
     attributes:
       value: |
-        Thanks for taking the time to fill out this bug report!
+       This can be the instruction for the user on how to use this form.
   - type: input
     id: contact
     attributes:
@@ -18,12 +18,12 @@ body:
     validations:
       required: false
   - type: textarea
-    id: what-happened
+    id: bug_description
     attributes:
-      label: What happened?
-      description: Also tell us, what did you expect to happen?
-      placeholder: Tell us what you see!
-      value: "A bug happened!"
+      label: Bug Description
+      description: Describe the bug
+      placeholder: Try to be as precise as possible
+      value: ""
     validations:
       required: true
   - type: dropdown
@@ -37,29 +37,24 @@ body:
         - frontend API
         - payments
         - infrastructure
+        - developer community
+        - storefront
     validations:
       required: true
   - type: dropdown
-    id: browsers
+    id: priority
     attributes:
-      label: What browsers are you seeing the problem on?
-      multiple: true
+      label: How important is this to your implementation
+      multiple: false
       options:
-        - Firefox
-        - Chrome
-        - Safari
-        - Microsoft Edge
-  - type: textarea
-    id: logs
+        - High
+        - Medium
+        - Low
+   - type: input
+    id: video_url
     attributes:
-      label: Relevant log output
-      description: Please copy and paste any relevant log output. This will be automatically formatted into code, so no need for backticks.
-      render: shell
-  - type: checkboxes
-    id: terms
-    attributes:
-      label: Code of Conduct
-      description: By submitting this issue, you agree to follow our [Code of Conduct](https://example.com)
-      options:
-        - label: I agree to follow this project's Code of Conduct
-          required: true
+      label: Video URL
+      description: Please add a video recording to help our team quickly identify the issue.
+      placeholder: ex. youtube.com
+    validations:
+      required: false
