--- a/.github/ISSUE_TEMPLATE/test-form-name.yml
+++ b/.github/ISSUE_TEMPLATE/test-form-name.yml
@@ -8,7 +8,7 @@ body:
   - type: markdown
     attributes:
       value: |
-       This can be the instruction for the user on how to use this form.
+       This can be the instruction for the user on how to use this form!
   - type: input
     id: contact
     attributes:
