--- a/.github/ISSUE_TEMPLATE/test-form-name.yml
+++ b/.github/ISSUE_TEMPLATE/test-form-name.yml
@@ -1,14 +1,16 @@
 name: test form name
 description: File a bug report v2
 title: "[Bug]: "
-labels: ["bug", "triage"]
+labels: 
+  - bug
+  - triage
 assignees:
   - testswell
 body:
   - type: markdown
     attributes:
       value: |
-       This can be the instruction for the user on how to use this form!
+        This can be the instruction for the user on how to use this form!
   - type: input
     id: contact
     attributes:
@@ -23,7 +25,6 @@ body:
       label: Bug Description
       description: Describe the bug
       placeholder: Try to be as precise as possible
-      value: "description"
     validations:
       required: true
   - type: dropdown
@@ -44,13 +45,15 @@ body:
   - type: dropdown
     id: priority
     attributes:
-      label: How important is this to your implementation
+      label: How important is this to your implementation?
       multiple: false
       options:
         - High
         - Medium
         - Low
-   - type: input
+    validations:
+      required: true
+  - type: input
     id: video_url
     attributes:
       label: Video URL
