add custom field

--- a/.github/ISSUE_TEMPLATE/test-form-name.yml
+++ b/.github/ISSUE_TEMPLATE/test-form-name.yml
@@ -53,7 +53,8 @@ body:
         - Low
     validations:
       required: true
-  - type: input
+videourl:
+- type: input
     id: video_url
     attributes:
       label: Video URL
